--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.1.1",
   "description": "Set of extra utilities mostly for rxjs",
   "main": "dist/index.js",
+  "type": "commonjs",
   "scripts": {
     "build": "tsc",
-    "test": "jasmine-ts --config=jasmine.json"
+    "test": "jasmine --config=jasmine.json"
   },
   "keywords": [
     "RxJS"
@@ -13,13 +14,12 @@
   "author": "Johan 't Hart",
   "license": "ISC",
   "dependencies": {
-    "rxjs": "^6.5.5"
+    "rxjs": "^7.5.7"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.5.10",
-    "jasmine": "^3.5.0",
-    "jasmine-ts": "^0.3.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "@types/jasmine": "^4.3.0",
+    "jasmine": "^4.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
